methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:25: error: Unit does not take parameters
run() {
      ^