methods.picture.PictureMono1.scala.code
def marquerSol() {
  baisseBrosse();
  leveBrosse()
}

def faireV() {
  avance();
  avance();
  marquerSol()
  gauche();
  avance();
  droite();
  avance();
  marquerSol();
  avance();
  droite();
  avance();
  gauche();
  marquerSol()
  avance();
  avance();
  gauche()
}

run() {
  for (a<- 1 to 4) {faireV()}
}

